Javascript nearly complete

--- a/Webpages/Java Script/index4.html
+++ b/Webpages/Java Script/index4.html
@@ -24,6 +24,12 @@
         /* This is a 
         multi line comment */
 
+        var myArray = ["Pizza", "Coke", "Burger"];
+
+        for (var a = 0; a < 3; a++) {
+            console.log(myArray[a]);
+        }
+
         document.getElementById("weatherButton").onclick=function() {
             
             var x = Math.random();
