--- a/bootstrap/appLauncher.html
+++ b/bootstrap/appLauncher.html
@@ -17,17 +17,17 @@
       }
 
       #topContainer {
-        background-image: url("images/landerImage.jpg");
-        height: 800px;
+        background-image: url("images/background2.jpg");
+        height: 100%;
         width: 100%;
         background-size: cover;
+        color: white;
 
       }
 
       #topRow {
         margin-top: 100px;
         text-align: center;
-        color: white;
       }
 
       #topRow h1 {
@@ -43,6 +43,10 @@
         margin-top: 30px;
       }
 
+      .marginRight {
+        margin-right: 30px;
+      }
+
       .center {
         text-align: center;
       }
@@ -54,7 +58,7 @@
 
       #footer {
         background-color: #B0D1FB;
-        padding-top: 70px;
+        padding-top: 30px;
         width: 100%;
       }
 
@@ -74,7 +78,7 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="Container">
           <div class="navbar-header">
-            <a href="" class="navbar-brand">My Application Launcher</a>
+            <a href="" class="navbar-brand">ePROCUR</a>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 
               <span class="sr-only">Toggle Navigation</span>
@@ -88,8 +92,20 @@
               <li class="active"><a href="#div1">Home</a></li>
               <li><a href="#div2">About</a></li>
               <li><a href="#div3">Download the App</a></li>
+              <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
             </ul>
-            <form class="navbar-form navbar-right">
+            <form class="navbar-form navbar-right marginRight">
               <div class="form-group">
                 <input type="email" class="form-control" placeholder="eMail">
               </div>
